Se arregla la UI

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header class="header">
         <h1>Generador de numeros aleatorios </h1>
-    </header>
+    </header>    
     <article>
-        <section>
-            <h2>Tipos de generadores</h2>
+        <section class="content">
+            <h2>Tipos de generador</h2>
             <h4>Por favor escoja uno: </h4>
-            <h3 class=" box"> <a href="parametersM.html">Congruencial mixto</a></h3>
-            <h3 class=" box"> <a href="">Congruencial multiplicativo</a> </h3>
+            <button class=" button"><h3 > <a href="generador-mixto.html">Congruencial mixto</a></h3></button>
+            <button class=" button"><h3 > <a href="generador-multi.html">Congruencial multiplicativo</a> </h3></button>
             <br>
         </section>
     </article>
